Implemented usage of JFX task for download, and also added retry and timeout handling